--- a/templates/curso.html
+++ b/templates/curso.html
@@ -22,7 +22,7 @@
 			<div class="col-lg-4">
 				<i class="fa fa-desktop"></i>
 				<h4>MODULO 1</h4>
-				<img src="../static/img/logo_png.png" class="img-responsive" alt="" width="50%" />
+				<img src="{% static 'img/logo_png.png' %}" class="img-responsive" alt="" width="50%" />
 				<p>T</p>
 			</div><!-- col-lg-4 -->
 
