--- a/templates/login-profe.html
+++ b/templates/login-profe.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,16 +9,14 @@
     <title> Login Teacher </title>
 
 <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../static/img//favicon/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="../static/img//favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-32x32.png' %}" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-16x16.png' %}" sizes="16x16" />
 <!-- end favicon  -->
 
-    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style-general.css" rel="stylesheet">
-    <link href="../static/css/style-login.css" rel="stylesheet">
-    <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="../static/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendors/bootstrap-3.3.6/dist/css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style-general.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'css/style-login.css' %}" rel="stylesheet">
     
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -56,7 +55,7 @@ $(document).ready(function() {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">  <img src="../static/img/logo/logo-e-font.png" class="img-responsive" alt="" width="50%" /> </a>
+          <a class="navbar-brand" href="{% url 'index' %}">  <img src="{% static 'img/logo/logo-e-font.png' %}" class="img-responsive" alt="" width="50%" /> </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -120,7 +119,7 @@ $(document).ready(function() {
 Para mayor información comuniquese al: (1) 000 29 00
                 </p></div>
                 <div class="col-sm-3 col-md-3 pull-right">
-                    <div class="centered"> <img src="../static/img/Escudo.png" class="img-responsive" alt=""/></div> </div>       
+                    <div class="centered"> <img src="{% static 'img/Escudo.png' %}" class="img-responsive" alt=""/></div> </div>       
      
                     </div>
                 </div>
@@ -145,21 +144,10 @@ Para mayor información comuniquese al: (1) 000 29 00
                 </div>
             </div>
         </div><!-- Footer -->
-
-
+        
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="static/javascript/jquery.min.js"></script>
+<script src="{% static 'javascript/jquery.min.js' %}"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="static/vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js">
-</script>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-
-
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="static/javascript/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="static/vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js"></script>
-<script src="./Signin Template for Bootstrap_files/ie10-viewport-bug-workaround.js"></script>
+<script src="{% static 'vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js' %}"></script>
 </body>
 </html>
