--- a/templates/plantilla1.html
+++ b/templates/plantilla1.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,15 +9,15 @@
     <title> {% block title %} {% endblock %}</title>
 
 <!-- Favicon -->
-    <link rel="icon" type="image/png" href="../static/img/favicon/favicon-32x32.png" sizes="32x32" />
-    <link rel="icon" type="image/png" href="../static/img/favicon/favicon-16x16.png" sizes="16x16" />
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-32x32.png' %}" sizes="32x32" />
+    <link rel="icon" type="image/png" href="{% static 'img/favicon/favicon-16x16.png' %}" sizes="16x16" />
 <!-- end favicon  -->
 
-    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../static/vendors/bootstrap-3.3.6/dist/css/bootstrap.css" rel="stylesheet">
-    <link href="../static/css/style-general.css" rel="stylesheet">
-    <link href="../static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="../static/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css">
+    <link href="{% static 'vendors/bootstrap-3.3.6/dist/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'vendors/bootstrap-3.3.6/dist/css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style-general.css' %}" rel="stylesheet">
+    <link href="{% static 'font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" type="text/css">
+    <link href="{% static 'font-awesome/css/font-awesome.css' %}" rel="stylesheet" type="text/css">
 
 </head>
 
@@ -31,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{% url 'index' %}">  <img src="../static/img/logo/logo-e-font.png" class="img-responsive" alt="" width="50%" /> </a>
+          <a class="navbar-brand" href="{% url 'index' %}">  <img src="{% static 'img/logo/logo-e-font.png' %}" class="img-responsive" alt="" width="50%" /> </a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
@@ -60,7 +61,7 @@
                     Para mayor información comuniquese al: (1) 000 29 00
                 </p></div>
                 <div class="col-sm-3 col-md-3 pull-right">
-                    <div class="centered"> <img src="../static/img/Escudo.png" class="img-responsive" alt=""/></div> </div>
+                    <div class="centered"> <img src="{% static 'img/Escudo.png' %}" class="img-responsive" alt=""/></div> </div>
         </div>
 
                     </div>
@@ -87,12 +88,12 @@
 		</div><!-- Footer -->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="../static/javascript/jquery.min.js"></script>
+<script src="{% static 'javascript/jquery.min.js' %}"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="../static/vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js">
+<script src="{% static 'vendors/bootstrap-3.3.6/dist/js/bootstrap.min.js' %}">
 </script>
-    <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <script src="../static/javascript/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.10.2.min.js' %}"></script>
+    <script src="{% static 'javascript/bootstrap.min.js' %}"></script>
 
 
 </body>
