--- a/templates/paginaEstudiante/perfil-estudiante.html
+++ b/templates/paginaEstudiante/perfil-estudiante.html
@@ -1,3 +1,4 @@
+{% load staticfiles %}
 {% extends 'plantilla2.html' %}
 {% block title %} Perfil {{ usuario.id.first_name }} {{ usuario.id.last_name }} {% endblock %}
 
